--- a/app/src/main/res/layout/item_detection.xml
+++ b/app/src/main/res/layout/item_detection.xml
@@ -7,4 +7,4 @@
     android:layout_marginStart="@dimen/margin_small"
     android:layout_marginTop="@dimen/margin_small"
     android:layout_marginEnd="@dimen/margin_small"
-    tools:text="Pony" />
+    tools:text="@tools:sample/lorem" />
