--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#607D8B</color>
     <color name="colorPrimaryDark">#455A64</color>
-    <color name="colorAccent">#FFC107</color>
+    <color name="colorAccent">#FBC02D</color>
     <color name="white">#FFF</color>
     <color name="black">#000</color>
     <color name="colorAccentLight">#A1FFECB3</color>
