handle no internet, timeout errors in detection process

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -272,7 +272,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:visibility="@{vm.showErrorLive}"
+                app:visibility="@{vm.errorLive != null}"
                 tools:visibility="gone">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -298,7 +298,7 @@
                         android:id="@+id/txt_error_description"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="@string/detection_error_unable_to_connect"
+                        android:text="@{vm.errorLive}"
                         android:textAlignment="center"
                         android:textSize="16sp"
                         android:textStyle="bold"
@@ -316,7 +316,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:constraint_referenced_ids="card_detections,card_inference,card_image_size"
-                app:visibility="@{!vm.showErrorLive}" />
+                app:visibility="@{vm.errorLive == null}" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
