rename main->detection, add mode screen

--- a/app/src/main/res/layout/activity_detection.xml
+++ b/app/src/main/res/layout/activity_detection.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="vm"
-            type="com.example.camera.presentation.main.MainViewModel" />
+            type="com.example.camera.presentation.detection.DetectionViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
