--- a/app/src/main/res/layout/dialog_settings_info.xml
+++ b/app/src/main/res/layout/dialog_settings_info.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="settings"
-            type="com.example.camera.presentation.main.info.SettingsInfo" />
+            type="com.example.camera.presentation.detection.info.SettingsInfo" />
 
     </data>
 
