--- a/app/src/main/res/layout/activity_classification_setup.xml
+++ b/app/src/main/res/layout/activity_classification_setup.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="vm"
-            type="com.example.camera.presentation.classification_setup.ClassificationSetupViewModel" />
+            type="com.example.camera.presentation.classification.setup.ClassificationSetupViewModel" />
 
     </data>
 
