--- a/app/src/main/res/layout/activity_detection_setup.xml
+++ b/app/src/main/res/layout/activity_detection_setup.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="vm"
-            type="com.example.camera.presentation.detection_setup.DetectionSetupViewModel" />
+            type="com.example.camera.presentation.detection.setup.DetectionSetupViewModel" />
 
     </data>
 
