refactor object detector and implement sending for classifcation

--- a/app/src/main/res/layout/activity_detection.xml
+++ b/app/src/main/res/layout/activity_detection.xml
@@ -160,7 +160,7 @@
                         android:id="@+id/txt_inference_last"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@{vm.processingResultLive.lastRecognitionTimeString}"
+                        android:text="@{vm.detectionResultLive.lastRecognitionTimeString}"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="1"
                         app:layout_constraintStart_toEndOf="@id/txt_inference_last_label"
@@ -180,7 +180,7 @@
                         android:id="@+id/txt_inference_average"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@{vm.processingResultLive.avgRecognitionTimeString}"
+                        android:text="@{vm.detectionResultLive.avgRecognitionTimeString}"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="1"
                         app:layout_constraintStart_toEndOf="@id/txt_inference_average_label"
@@ -232,7 +232,7 @@
                         android:id="@+id/txt_image_size_last"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@{vm.processingResultLive.lastImageSizeKbString}"
+                        android:text="@{vm.detectionResultLive.lastImageSizeKbString}"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="1"
                         app:layout_constraintStart_toEndOf="@id/txt_image_size_last_label"
@@ -252,7 +252,7 @@
                         android:id="@+id/txt_image_size_average"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@{vm.processingResultLive.avgImageSizeKbString}"
+                        android:text="@{vm.detectionResultLive.avgImageSizeKbString}"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="1"
                         app:layout_constraintStart_toEndOf="@id/txt_image_size_average_label"
