--- a/app/src/main/res/layout/partial_setting_info.xml
+++ b/app/src/main/res/layout/partial_setting_info.xml
@@ -13,11 +13,15 @@
             name="value"
             type="String" />
 
+        <variable
+            name="visibility"
+            type="Boolean" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:visibility="@{visibility}">
 
         <TextView
             android:id="@+id/txt_label"
