--- a/app/src/main/res/layout/activity_classification.xml
+++ b/app/src/main/res/layout/activity_classification.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -27,12 +28,36 @@
             android:id="@+id/view_tracker"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:data="@{vm.classifiedObjectsLive}"
+            app:data="@{vm.detectedObjectsLive}"
             app:layout_constraintBottom_toBottomOf="@id/texture_view"
             app:layout_constraintEnd_toEndOf="@id/texture_view"
             app:layout_constraintStart_toStartOf="@id/texture_view"
             app:layout_constraintTop_toTopOf="@id/texture_view"
             app:modelInputSize="@{vm.selectedImageSizeLive}" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_detections"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:classifications="@{vm.classifiedObjectsLive}"
+            app:hasFixedSize="@{true}"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/texture_view"
+            app:layout_constraintWidth_percent="1"
+            tools:listitem="@layout/item_classification" />
+
+        <TextView
+            android:id="@+id/txt_no_detections"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/detection_empty_result"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
