--- a/app/src/main/res/layout/item_classification.xml
+++ b/app/src/main/res/layout/item_classification.xml
@@ -42,13 +42,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_small"
                 android:text="@{data.resultPrimary.title}"
-                android:textColor="@{data.color}"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/txt_primary_result_confidence"
                 app:layout_constraintTop_toTopOf="parent"
                 app:visibility="@{data.resultPrimary != null}"
-                tools:text="Audi S4 Sedan 2012" />
+                tools:text="Audi S4 Sedan 2012"
+                tools:textColor="@color/colorAccent" />
 
             <TextView
                 android:id="@+id/txt_secondary_result_confidence"
