--- a/app/src/main/res/layout/activity_classification.xml
+++ b/app/src/main/res/layout/activity_classification.xml
@@ -68,7 +68,7 @@
             app:borderWidth="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/ic_pause"
+            app:srcCompat="@{vm.fabIconLive}"
             tools:ignore="ContentDescription" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
