--- a/app/src/main/res/layout/activity_classification.xml
+++ b/app/src/main/res/layout/activity_classification.xml
@@ -59,6 +59,18 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <ImageView
+            android:id="@+id/img_info"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:onClick="@{() -> vm.onShowInfoSelected()}"
+            android:padding="@dimen/margin_small"
+            app:layout_constraintBottom_toBottomOf="@id/texture_view"
+            app:layout_constraintEnd_toEndOf="@id/texture_view"
+            app:srcCompat="@drawable/ic_info"
+            app:tint="@color/white"
+            tools:ignore="ContentDescription" />
+
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -69,7 +81,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:srcCompat="@{vm.fabIconLive}"
-            tools:ignore="ContentDescription" />
+            tools:ignore="ContentDescription"
+            tools:src="@drawable/ic_pause" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
