handle error states on classification screen

--- a/app/src/main/res/layout/activity_classification.xml
+++ b/app/src/main/res/layout/activity_classification.xml
@@ -35,6 +35,18 @@
             app:layout_constraintTop_toTopOf="@id/texture_view"
             app:modelInputSize="@{vm.selectedImageSizeLive}" />
 
+        <ImageView
+            android:id="@+id/img_info"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:onClick="@{() -> vm.onShowInfoSelected()}"
+            android:padding="@dimen/margin_small"
+            app:layout_constraintBottom_toBottomOf="@id/texture_view"
+            app:layout_constraintEnd_toEndOf="@id/texture_view"
+            app:srcCompat="@drawable/ic_info"
+            app:tint="@color/white"
+            tools:ignore="ContentDescription" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_detections"
             android:layout_width="0dp"
@@ -48,6 +60,18 @@
             app:layout_constraintWidth_percent="1"
             tools:listitem="@layout/item_classification" />
 
+        <include
+            layout="@layout/partial_processing_error_card"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="4dp"
+            app:errorDescription="@{vm.errorLive}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/texture_view"
+            tools:visibility="gone" />
+
         <TextView
             android:id="@+id/txt_no_detections"
             android:layout_width="wrap_content"
@@ -58,18 +82,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/img_info"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:onClick="@{() -> vm.onShowInfoSelected()}"
-            android:padding="@dimen/margin_small"
-            app:layout_constraintBottom_toBottomOf="@id/texture_view"
-            app:layout_constraintEnd_toEndOf="@id/texture_view"
-            app:srcCompat="@drawable/ic_info"
-            app:tint="@color/white"
-            tools:ignore="ContentDescription" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_width="wrap_content"
