--- a/app/src/main/res/layout/activity_detection.xml
+++ b/app/src/main/res/layout/activity_detection.xml
@@ -263,53 +263,17 @@
 
             </androidx.cardview.widget.CardView>
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/card_error"
-                style="@style/CardView.Detections"
-                android:layout_marginHorizontal="@dimen/margin_cards"
-                android:layout_marginVertical="@dimen/margin_cards"
+            <include
+                layout="@layout/partial_processing_error_card"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_margin="4dp"
+                app:errorDescription="@{vm.errorLive}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:visibility="@{vm.errorLive != null}"
-                tools:visibility="gone">
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="@dimen/margin_cards">
-
-                    <TextView
-                        android:id="@+id/txt_error"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:drawablePadding="@dimen/margin_small"
-                        android:gravity="center_vertical"
-                        android:text="@string/detection_error"
-                        android:textColor="@color/colorBoxRed"
-                        android:textStyle="bold"
-                        app:drawableStartCompat="@drawable/ic_warning"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <TextView
-                        android:id="@+id/txt_error_description"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:text="@{vm.errorLive}"
-                        android:textAlignment="center"
-                        android:textSize="16sp"
-                        android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/txt_error" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-            </androidx.cardview.widget.CardView>
+                app:layout_constraintTop_toBottomOf="@id/texture_view"
+                tools:visibility="gone" />
 
             <androidx.constraintlayout.widget.Group
                 android:id="@+id/group_cards"
