--- a/app/src/main/res/drawable/shape_classification_confidence_other.xml
+++ b/app/src/main/res/drawable/shape_classification_confidence_other.xml
@@ -4,6 +4,6 @@
     <solid android:color="#00FFFFFF" />
     <stroke
         android:width="1dp"
-        android:color="@color/colorAccent" />
+        android:color="@color/white" />
     <corners android:radius="4dp" />
 </shape>
