--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -33,10 +33,7 @@
         <androidx.cardview.widget.CardView
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginStart="@dimen/margin_medium"
-            android:layout_marginTop="@dimen/margin_medium"
-            android:layout_marginEnd="@dimen/margin_medium"
-            android:layout_marginBottom="@dimen/margin_medium"
+            android:layout_margin="@dimen/margin_medium"
             app:cardBackgroundColor="#71FFFFFF"
             app:cardCornerRadius="8dp"
             app:layout_constraintBottom_toTopOf="@id/btn_proceed"
