start migration to single-activity app

--- a/app/src/main/res/layout/fragment_mode_chooser.xml
+++ b/app/src/main/res/layout/fragment_mode_chooser.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="vm"
-            type="com.example.camera.presentation.mode.ModeViewModel" />
+            type="com.example.camera.presentation.mode.AppModeViewModel" />
 
     </data>
 
